@@ -16,6 +16,7 @@ xine-lib (next version) [someone fill in stability and urgency]
   * QT RPZA video decoder
   * Wing Commander III video decoder
   * Logarithmic PCM (mu-law & A-law) audio decoder
+  * GSM 6.10 audio decoder
   * time-based seeking in ogg-streams
   * improved support for ogg-streams containing video (so-called ogm streams)
   * spu encoding for full overlay support with dxr3
